Extract various testing facilities into a ComponentTest class